opdracht3/public/css/style.css
:root {
	/* Colors: */
	--primary-color: #2BF58C;
	--dark-color: #20B567;
	--black-color: #051C10;
	--red-color: #F5402B;

	/* Spacing: */
	--spacing-unit: 1.5rem;
}

/*
====================
		General
====================
*/

* {
	/* Fallback box-sizing */
	box-sizing: border-box;
	padding: 0;
	margin: 0;
	font-family: inherit;
	font-size: inherit;
	font-weight: inherit;
}

body {
	color: #051C10;
	color: var(--black-color);
	background-color: #F1F1F1;
	font-family: 'montserrat', arial, helvetica, sans-serif;
	font-size: 1em;
	font-weight: 300;
}

/* Get rid of standard IOS styling */
input,
button {
	border-radius: 0;
	background: none;
	-webkit-appearance: none;
}

h1 {
	font-size: 1.5em;
}
@media all and (min-width: 30em) {
	h1 {
		font-size: 2em;
	}
}

button {
	flex: 0 0 auto;
	display: block;
	width: 40px;
	width: 2.5rem;
	height: 40px;
	height: 2.5rem;
	padding: 8px;
	padding: .5rem;
	border: 0;
	border-radius: 50%;
	outline: 0;
	color: #2BF58C;
	color: var(--primary-color);
	background-color: #051C10;
	background-color: var(--black-color);
	font-size: 1.5em;
	font-weight: 500;
	line-height: 1;
	cursor: pointer;
	transition: all .3s ease-in-out;
}
button > svg {
	width: 16px;
	width: 1rem;
	height: 16px;
	height: 1rem;
	fill: #FFF;
}

/*
====================
		Add items
====================
*/

.add-item {
	display: block;
	width: 100%;
	padding: 24px;
	padding: 1.5rem;
	padding: var(--spacing-unit);
	background-color: #2BF58C;
	background-color: var(--primary-color);
}

.add-item > * {
	display: block;
	width: 100%;
	max-width: 640px;
	max-width: 40rem;
	padding: 24px;
	padding: 1.5rem;
	padding: var(--spacing-unit);
	margin: 0 auto;
}

.add-item form label {
	display: block;
	width: 100%;
	margin-bottom: 24px;
	margin-bottom: 1.5rem;
	margin-bottom: var(--spacing-unit);
	font-size: 1.5em;
	font-weight: 500;
}

.add-item form > div {
	display: block;
	display: flex;
	justify-content: space-between;
	align-items: center;
	height: 70px;
	height: 4.375rem;
}

.add-item form input {
	flex: 1 0 auto;
	display: inline-block;
	width: calc(100% - 64px);
	width: calc(100% - 4rem);
	height: 100%;
	padding: calc((70px - 1.5em) / 2);
	padding: calc((4.375rem - 1.5em) / 2);
	padding-left: 0;
	border: 0;
	border-bottom-style: solid;
	border-bottom-width: 2px;
	border-bottom-width: .125rem;
	border-bottom-color: #051C10;
	border-bottom-color: var(--black-color);
	outline: 0;
	background-color: transparent;
}
.add-item form input::-webkit-input-placeholder {
	color: #20B567;
	color: var(--dark-color);
}

.add-item form [type='submit'] {
	float: right;
	margin: 15px auto;
	margin: .9375rem auto;
	margin-left: 24px;
	margin-left: 1.5rem;
	margin-left: var(--spacing-unit);
}
.add-item form [type='submit']:hover,
.add-item form [type='submit']:active,
.add-item form [type='submit']:focus {
	color: #051C10;
	color: var(--black-color);
	background-color: #FFF;
}

/*
====================
		Main
====================
*/

main {
	display: block;
	width: 100%;
}

main ul {
	display: block;
	display: flex;
	flex-wrap: wrap;
	flex-direction: column;
	width: 100%;
	max-width: 688px;
	max-width: 43rem;
	padding: 12px;
	padding: .75rem;
	padding: calc(var(--spacing-unit) / 2);
	margin: 0 auto;
}

main li {
	display: block;
	display: flex;
	justify-content: space-between;
	align-items: center;
	height: 70px;
	height: 4.375rem;
	margin: 12px;
	margin: .75rem;
	margin: calc(var(--spacing-unit) / 2);
	background-color: #FFF;
}
main li.draggable {
	cursor: move;
}

main li span {
	flex: 1 0 auto;
	display: inline-block;
	width: calc(100% - 88px);
	width: calc(100% - 5.5rem);
	height: 100%;
	padding-left: 24px;
	padding-left: 1.5rem;
	padding-left: var(--spacing-unit);
	padding-right: 24px;
	padding-right: 1.5rem;
	padding-right: var(--spacing-unit);
	padding-top: calc((70px - 1.5em) / 2);
	padding-top: calc((4.375rem - 1.5em) / 2);
	padding-bottom: calc((70px - 1.5em) / 2);
	padding-bottom: calc((4.375rem - 1.5em) / 2);
	font-size: 1.5em;
	line-height: 1.4;
}

main li form {
	float: right;
	margin: 15px 24px;
	margin: .9375rem 1.5rem;
	margin: .9375rem var(--spacing-unit);
}

main li button:hover,
main li button:active,
main li button:focus {
	background-color: #F5402B;
	background-color: var(--red-color);
}

/*
====================
		Drag & Drop
====================
*/

.dropzone {
	position: absolute;
	left: 0;
	bottom: 0;
	display: block;
	opacity: 0;
	width: 100%;
	padding: 24px;
	padding: 1.5rem;
	padding: var(--spacing-unit);
	background-color: #F5402B;
	background-color: rgba(245, 64, 43, .75);
	pointer-events: none;
	transition: all .3s ease-in-out;
}
.dropzone.show {
	opacity: 1;
	pointer-events: auto;
}

.dropzone input,
.dropzone li {
	display: none;
}

.dropzone > div {
	display: block;
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
	width: 100%;
	height: 200px;
	height: 12.5rem;
	border-style: dashed;
	border-width: 2px;
	border-width: .125rem;
	border-color: #FFF;
	border-color: rgba(255, 255, 255, .5);
}

.dropzone h1 {
	display: block;
	margin: 84px auto;
	margin: 5.25rem auto;
	color: #FFF;
	text-align: center;
}

